<resources>
    <string name="app_name">PM Search</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="ajouter_une_photo">Ajouter une photo</string>
    <string name="commentaire">Commentaire</string>
    <string name="num_ro_pm">Numéro de PM</string>
    <string name="city">City</string>
    <string name="rechercher_le_pm_ici">Rechercher le PM ici</string>
    <string name="photo_PM">Photo du PM</string>
    <string name="pm_r_cemment_ajout_s">PM récemment ajoutés</string>
    <string name="pm_les_plus_consult_s">PM les plus consultés</string>
    <string name="statistiques">Statistiques</string>
    <string name="adresse_du_pm">Adresse de PM</string>
    <string name="ville">ville</string>
    <string name="image_du_pm">image du pm</string>
    <string name="ajouter_un_pm">Ajouter un PM</string>
    <string name="add_pm_button_description">Ajouter un nouveau PM</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
    <string name="confirmer">Confirmer</string>
    <string name="add_pm">Ajouter un PM</string>
    <string name="route_button">Itinéraire</string>
    <string name="aucun_pm_trouv">Aucun PM trouvé</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="email">Email</string>
    <string name="soci_t">Société</string>
    <string name="nom_complet">Nom Complet</string>
    <string name="e_mail">E-mail</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="reinitialiser">Reinitialiser</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="mgk_telecom_all_right_reserved_nby_meutevive">MGK TELECOM all right reserved\nby Meutevive</string>
    <string name="home">Acceuil</string>
    <string name="recherche_pm">Recherche PM</string>
    <string name="ajout_pm">Ajout PM</string>
    <string name="profil">Profil</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="pm_consult_s">PM consultés</string>
    <string name="total_pm">Total PM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signaler">Signaler</string>
    <string name="channel_name">Notifications des signalements</string>
    <string name="channel_description">Recevez une notification chaque fois qu\'un PM est signalé.</string>
    <string name="msg_token_fmt">FCM Token: %s</string>

</resources>