<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:theme="@style/Theme.MyApp"
    tools:context=".screens.register.RegisterPMActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_pm_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Enrigistrement de PM"
        app:titleTextColor="@color/colorBackground"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/register_pm_toolbar"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Numéro PM CardView -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pmNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/card"
                        android:drawablePadding="12dp"
                        android:hint="@string/num_ro_pm"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="45dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <!-- Adresse CardView -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/location"
                        android:drawablePadding="12dp"
                        android:hint="@string/adresse_du_pm"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="45dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <!-- Comment CardView -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/commentEditText"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/message"
                        android:drawablePadding="12dp"
                        android:hint="@string/commentaire"
                        android:imeOptions="actionDone"
                        android:minWidth="320dp"
                        android:minHeight="45dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <!-- Photo CardView -->
            <androidx.cardview.widget.CardView
                android:id="@+id/photoCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <Button
                    android:id="@+id/photoButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:drawableStart="@drawable/camera"
                    android:drawablePadding="12dp"
                    android:text="@string/photo_PM"
                    android:imeOptions="actionDone"
                    android:minWidth="320dp"
                    android:minHeight="45dp"
                    android:focusable="true"
                    android:clickable="true" />

            </androidx.cardview.widget.CardView>

            <!-- Selected Image ImageView -->
            <ImageView
                android:id="@+id/selectedImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_du_pm" />



            <!-- Submit Button -->
            <Button
                android:id="@+id/submit_button"
               style="@style/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/enregistrer" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

